# service-demo

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20230816_032228_create_post_table.rs  m20230816_032636_add_post_fields.rs
scripts/: read_xls.py  requirements.txt
src/: main.rs
src/app/: cmd.rs  log.rs  mod.rs
src/app/utils/: mod.rs  mtime.rs  string.rs
src/doc/: mod.rs
src/domain/entity/: mod.rs  post.rs  todo.rs
src/domain/repository/: error.rs  mod.rs  post.rs  todo.rs
src/infrastructure/: mod.rs
src/infrastructure/config/: conf.rs  mod.rs  nacos.rs
src/infrastructure/persistence/: mod.rs  post.rs  todo.rs
src/infrastructure/shell/: child.rs  mod.rs
src/interface/: dto.rs  mod.rs  resp.rs  route.rs
src/interface/handler/: mod.rs  post.rs  read_xls.rs  todo.rs
