[package]
name = "service-demo"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/wgdzlh/service-demo"
description = """
A demo for constructing Rust web backend service.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
migration = { path = "./migration" }
axum = { version = "0.6", features = ["multipart"] }
tower-http = { version = "0.4", features = ["trace"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
# tokio-stream = "0.1"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
    "with-time",
] }
tracing = "~0.1"
tracing-subscriber = { version = "0.3", features = ["time"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
utoipa = { version = "3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3", features = ["axum"] }
time = { version = "0.3", features = ["local-offset"] }
const_format = "~0.2"
anyhow = "1"
once_cell = "1"
async-trait = "~0.1"
toml = "0.7"
nacos-sdk = "0.3"
uuid = { version = "1.4", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
notify = "6"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1", features = ["test-util"] }

[profile.release]
strip = "symbols"
# panic = "abort"
